    * **New:** Version Creator UI now uses a QSplitter for tasks_groupBox,
      new_version_groupBox and previous_versions_groupBox which allows sizing
      of the columns.
    * **New:** Version Creator UI now shows the dependent task list in a new
      column in tasks_treeWidget.
    * **Utils:**
      
      * **New:** Added a new class called **UICFile** to manage uic files.

  * **Utils:**

    * **New:** utils.open_browser_in_location() now selects the file if a file
      path is given.

0.1.0.a3
========

* **Pipeline:**

  * **UI:**

    * **Fix:** Reorganized and fixed the code that chooses between ``PySide``
      or ``PyQt4``. To choose one of the libraries, let say to choose
      ``PySide`` as the library in UI::

        # first import the code that sets the system to pyside
        from anima.pipeline.ui import SET_PYSIDE
        SET_PYSIDE()

        # then import QtCore and QtGui as follows
        from anima.pipeline.ui.lib import QtCore, QtGui

      The default library is PyQt4.
    * **Update:** **version_creator.fill_tasks_treeWidget()** now works much
      faster.
    * **Update:** **version_creator.previous_versions_tableWidget** now
      displays the icon of the created environment.

  * **Environments:**

    * **Maya:**

      * **Update:** Maya now uses the folder that the current version is saved
        as the project folder.
      * **Update:** Maya sets the fps and resolution even if it is not the
        first version in its series.

0.1.0.a2
========

* **Pipeline:**

  * **Update:** login_dialog is now working.
  * **New:** created a new UI called version_creator for creating new Versions
    from within environments
  * **New:** A new field is added to the **version_creator** UI which lets the
    user to restore the previous version from the given path.
  * **New:** Created environment class for **Fusion**.
  * **New:** Created environment class for **Maya**.

0.1.0.a1
========

* Update: Organized the folder structure